# core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
jetshift_core/: js_logger.py
jetshift_core/commands/: banners.py  dev.py  job.py  listener.py  main.py  make.py  migration.py  quicker.py  seeder.py  version.py
jetshift_core/commands/migrations/: clickhouse.py  common.py  migration.py  mysql.py
jetshift_core/commands/seeders/: clickhouse.py  common.py  csv.py  mysql.py  seeder.py
jetshift_core/helpers/: clcikhouse.py  common.py  database.py  dev.py  listeners.py  mysql.py  quicker.py
jetshift_core/helpers/migrations/: common.py
jetshift_core/runners/: dev.py  entrypoint.py  job.py  listener.py  migration.py  quicker.py  seeder.py
jetshift_core/stubs/: make.py
jetshift_core/stubs/jobs/: common.yaml  mysql_clickhouse.py  mysql_clickhouse_insert.py  mysql_clickhouse_insert_or_update.py  mysql_clickhouse_truncate_insert.py  simple.py
jetshift_core/stubs/migrations/: clickhouse.py  mysql.py  sample.yaml  sample.yml
jetshift_core/stubs/quickers/: mix.py  sample.yaml  sample.yml
jetshift_core/stubs/seeders/: mysql.py
jetshift_core/tasks/: mysql_clickhouse_insert.py  mysql_clickhouse_insert_or_update.py  mysql_clickhouse_truncate_insert.py
jetshift_core/tasks/migrate/: mysql_clickhouse.py
jetshift_core/utils/database/: sqlalchemy_clickhouse.py  sqlalchemy_mysql.py
